docs(website): finished the web testing tutorial

--- a/documentation/serenity-js.org/docs/about/index.mdx
+++ b/documentation/serenity-js.org/docs/about/index.mdx
@@ -9,6 +9,6 @@ interacting with **_any_** interface of your system while reducing the number of
 
 In this chapter, you'll learn:
 - How to [install Serenity/JS modules](/handbook/about/installation) and their runtime dependencies
-- How the [modular architecture](/handbook/about/architecture) of Serenity/JS works and why it's beneficial for test automation frameworks you build on top of it
+- Why the [modular architecture](/handbook/about/architecture) of Serenity/JS is beneficial for test automation frameworks you build on top of it
 - How [Serenity/JS semantic versioning](/handbook/about/versioning) works and how to stay up to date with the latest features and bug fixes
 - [What's changed in Serenity/JS v3](/handbook/about/serenity-js-v3) compared to v2
