--- a/documentation/serenity-js.org/docs/design/debugging.mdx
+++ b/documentation/serenity-js.org/docs/design/debugging.mdx
@@ -97,7 +97,7 @@ await actorCalled('Debbie').attemptsTo(
 );
 ```
 
-## Tweaking Playwright locators
+## Exploring Playwright locators
 
 [Playwright Test for VSCode](https://marketplace.visualstudio.com/items?itemName=ms-playwright.playwright)
 provides features that allow for [experimenting with web UI locators](https://marketplace.visualstudio.com/items?itemName=ms-playwright.playwright#tune-locators)
