--- a/documentation/serenity-js.org/docs/getting-started.mdx
+++ b/documentation/serenity-js.org/docs/getting-started.mdx
@@ -9,13 +9,12 @@ import SupportedNodeVersions from '@site/src/components/SupportedNodeVersions'
 import CurrentNodeVersion from '@site/src/components/CurrentNodeVersion'
 ```
 
-:::note Key points
+In this article, you'll learn how:
 - [**Serenity/JS Gitpods**](#serenityjs-gitpods) let you experience the framework in your web browser _right now_, no installation required!
 - [**Serenity/JS Project Templates**](#serenityjs-project-templates) are a good starting point and a reference implementation for your new test automation project
 - [**Serenity/JS Modules**](#serenityjs-modules) allow you to customise your project setup, or add Serenity/JS to an existing project
 - [**Free GitHub.com account**](#your-githubcom-account) gives you access to Serenity/JS resources, including code repositories, examples and reference implementations, Serenity/JS issue tracker, Serenity/JS Gitpod workspaces, and the Serenity/JS Community Chat.
 - [**Your feedback and support**](#your-feedback-matters) will help Serenity/JS to evolve to better meet _your needs_, so get engaged and be part of our community!
-:::
 
 ## Serenity/JS Gitpods
 
@@ -97,7 +96,7 @@ New tutorials and videos are coming soon, follow us on [LinkedIn](https://www.li
 
 Serenity/JS is a free open-source framework, so we rely on our [wonderful GitHub sponsors](https://github.com/sponsors/serenity-js) to keep the lights on.
 
-If Serenity/JS has made your life a bit easier and you'd like us to keep the new features, examples, documentation, and videos coming - please support our work on GitHub 🙇
+If Serenity/JS has made your life a bit easier, and you'd like us to keep the new features, examples, documentation, and videos coming - please support our work on GitHub 🙇
 
 [![GitHub Sponsors](https://img.shields.io/badge/Support%20@serenity%2FJS-703EC8?style=for-the-badge&logo=github&logoColor=white)](https://github.com/sponsors/serenity-js)
 :::
