--- a/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
@@ -8,24 +8,27 @@ sidebar_position: 1
 import Figure from '@site/src/components/Figure'
 ```
 
-:::note Key points
-- Serenity/JS works well with popular development environments, including the free [Visual Studio Code](https://code.visualstudio.com/)
-- Serenity/JS tests are just high-quality code so all your regular programming tools will work as expected
-- Serenity/JS test scenarios are **actor-centric** and follow the [**Screenplay Pattern**](/handbook/design/screenplay-pattern)
-- Serenity/JS uses an activity-based code reuse model
-- Serenity/JS assertions and synchronisation statements are portable across interfaces and integration tools
-- Serenity/JS has first-class support for the asynchronous nature of JavaScript and takes advantage of modern language features.
-:::
-
-In this section, you'll learn the basics of web testing with Serenity/JS; I'll show you how to **run and debug existing tests**,
+In this guide, you'll learn the basics of web testing with Serenity/JS; I'll show you how to **run and debug existing tests**,
 and **how to write new test scenarios**. While we'll focus on helping you **get the basics right**, I'll point you to the more **advanced
 techniques** and **patterns** when needed.
 
-We'll be using a [**Gitpod.io workspace**](/handbook/getting-started#serenityjs-gitpods) to work with Serenity/JS in your web browser, so there's **no need to install anything** on you computer.
+My goal with all the Serenity/JS guides in this handbook, including this one, is so that they're easy to follow no matter if you're a test automation expert,
+or only just starting on your journey. If you found anything here that isn't as clear as it could've been, please let me know in the comments,
+or [submit a correction](https://github.com/serenity-js/serenity-js/tree/main/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx).
+
+To keep things simple, we'll be using a [**Gitpod.io workspace**](/handbook/getting-started#serenityjs-gitpods) to work with Serenity/JS in your web browser, so there's **no need to install anything** on you computer.
 If you prefer to set up Serenity/JS locally instead, follow the installation instructions in [Serenity/JS + Playwright Test project template](https://github.com/serenity-js/serenity-js-playwright-test-template).
 
+Key points:
+- Serenity/JS works well with popular development environments, including the free [Visual Studio Code](https://code.visualstudio.com/)
+- Serenity/JS tests are just high-quality code, so all your regular programming tools will work as expected
+- Serenity/JS test scenarios are **actor-centric** and follow the [**Screenplay Pattern**](/handbook/design/screenplay-pattern) to help you capture **business domain vocabulary** and **business workflows**
+- Serenity/JS uses an **activity-based** composition model, optimised for readability and code reuse
+- Serenity/JS assertions and synchronisation statements are portable across interfaces and integration tools
+- Serenity/JS has first-class support for TypeScript and the asynchronous nature of the JavaScript runtime
+
 :::info Pro Tip
-If you get lost or stumble upon a problem you're not quite sure how to solve - **[Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im)** is here to help.
+If you get lost or stumble upon a problem you're not quite sure how to solve - ask on the **[Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im)**.
 :::
 
 ## Launching your workspace
@@ -64,7 +67,7 @@ You can view them using your [Visual Studio Code Project Explorer sidebar](https
 
 <Figure
     caption='Visual Studio Code user interface showing an example test scenario'
-    img={require('@site/static/images/web-testing/your-first-web-scenario/vscode-ui.png')}
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-ui.png')}
 />
 
 There are two ways to run Playwright tests in Visual Studio Code, and you can do it either by:
@@ -249,7 +252,7 @@ You use activities to model the logical elements of a workflow that an end-user 
 would perform to accomplish some **goal**.
 
 :::info Remember
-**Actors** perform **activities** to interact with the system under test.
+**Actors** perform **activities** to interact with the system under test and accomplish their **goals**.
 :::
 
 From the implementation perspective, **Serenity/JS activities** are the **most basic form of code reuse** and manifest themselves
@@ -333,7 +336,7 @@ over time, writing test scenarios becomes easier as you're simply re-arranging e
 
 ### Using portable assertions
 
-Serenity/JS activity-based programming model applies to performing assertions just as well as it applies
+Serenity/JS activity-based programming model applies to performing [assertions](/handbook/design/assertions) just as well as it applies
 to performing [tasks and interactions](/handbook/web-testing/your-first-web-scenario#modelling-a-workflow-using-reusable-activities).
 In fact, Serenity/JS assertion to [`Ensure`](/api/assertions/class/Ensure) is just another interaction
 you give to an actor to perform.
@@ -370,14 +373,50 @@ await actor.attemptsTo(
 )
 ```
 
-All [Serenity/JS assertions](/api/assertions) follow the **same consistent pattern**
+All [Serenity/JS assertions](/api/assertions) follow the [**same consistent pattern**](/handbook/design/assertions)
 and all the [Serenity/JS expectations](/api/assertions#Index) (such as [`equals`](/api/assertions/function/equals))
 are **interface-agnostic**. This design helps to make your test code **portable** across interfaces
 and lower-level integration tools and enables you to use a single pattern no matter the type of interface you interact with.
 
 In addition to [interface-agnostic expectations](/api/assertions#Index),
-Serenity/JS also ships with [web-specific expectations](/api/web#Index) like [`isVisible()`](/api/web/function/isVisible)
+Serenity/JS also ships with [web-specific expectations](/handbook/design/assertions#web-assertions) like [`isVisible()`](/api/web/function/isVisible)
 that are portable across web integration tools, such as Playwright, WebdriverIO, or Selenium.
+
+### Analysing assertion failures
+
+You've already seen what happens when an assertion passes. But what happens when it fails?
+
+To experience how you'd go about analysing a Serenity/JS assertion failure,
+modify the scenario [you've written earlier](/handbook/web-testing/your-first-web-scenario#writing-serenityjs-test-scenarios)
+to make it fail:
+
+```typescript title="spec/recording-items.spec.ts"
+describe('Todo List App', () => {
+
+    it('should allow me to add a todo item', async ({ actor }) => {
+        await actor.attemptsTo(
+            startWithAnEmptyList(),
+
+            recordItem('Buy some cake'),
+
+            Ensure.that(itemNames(), equals([
+                'Buy some milk',
+            ])),
+        )
+    })
+})
+```
+
+When you run the scenario again, you'll notice how the advanced support for Visual Studio Code with
+[Playwright Test extension](https://marketplace.visualstudio.com/items?itemName=ms-playwright.playwright),
+enabled by [Serenity/JS Playwright Test](/handbook/test-runners/playwright-test) module,
+makes it easy to see exactly where the assertion failure has happened.
+
+<Figure
+    caption='Advanced integration between Serenity/JS and Visual Studio Code with Playwright Test extension'
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-analysing-assertion-failures.gif')}
+/>
+
 
 ### Exercises
 
@@ -394,26 +433,303 @@ that are portable across web integration tools, such as Playwright, WebdriverIO,
 
 ## Debugging tests and interactive execution
 
-Add a debug statement
-open VNC
-run in debug mode
+A [standard Node.js debugger](https://nodejs.org/en/docs/guides/debugging-getting-started) used by your IDE is designed to deal with basic, imperative code,
+and not the declarative programming model used by Serenity/JS. This means that using a [Visual Studio Code debugger](https://code.visualstudio.com/docs/editor/debugging) to set a breakpoint on one of the activities
+given to an actor to perform **will not** have the desired effect. That's because your IDE pauses the scenario when the activity is **declared**
+and not when it's **executed**.
 
-- Automatically taking screenshots on failure
-- Tracing
-- Videos
-- Playwright reports
+Luckily, Serenity/JS has a solution to this problem.
 
-## Identifying page elements
+<Figure
+    caption='Visual Studio Code debugger pauses execution when the activity is declared, not when it is executed'
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-imperative-debugging.gif')}
+/>
 
-Page elements are questions, questions are the way for actors to retrieve information about their environment and the state of the system under test
+### Debugging test scenarios
 
-## Running tests on CI
+To help a Node.js debugger bridge the gap between the imperative and declarative programming models,
+Serenity/JS offers [debugging capabilities](/handbook/design/debugging) and the interaction to [`Debug`](/api/core/class/Debug).
+To use it, add the following code snippet to your test scenario, making sure to also use Visual Studio Code Quick Fix
+feature to add `import { Debug } from '@serenity-js/core'`:
 
-## Viewing reports
+```typescript
+Debug.values(() => {
+    // highlight-next-line
+    // set breakpoint
+}),
+```
 
-I've configured all the [Serenity/JS project templates](/handbook/getting-started#serenityjs-project-templates)
-to produce
+Next, [set a breakpoint](https://code.visualstudio.com/docs/editor/debugging) on the line indicated by the comment,
+and run your test scenario in debug mode to see your IDE pause the execution between actor's activities:
 
-## Configuring test runner
+<Figure
+    caption='Visual Studio Code debugger pauses execution when the interaction to Debug is invoked'
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-declarative-debugging.gif')}
+/>
 
-[Configure Playwright Test](/handbook/test-runners/playwright-test)
+### Debugging tasks
+
+The great thing about the interaction to [`Debug`](/api/core/class/Debug) is that you can use it **not just in the top-level
+test scenarios**, but also in **any custom Serenity/JS tasks** you define.
+
+To try it out, open [`spec/todo-list-app/TodoApp/tasks.ts`](https://github.com/serenity-js/serenity-js-playwright-test-template/blob/main/spec/todo-list-app/TodoApp/tasks.ts)
+and modify the task to `startWithAnEmptyList` to add the interaction to `Debug` and set a breakpoint on the line indicated by the comment:
+
+```typescript title="spec/todo-list-app/TodoApp/tasks.ts"
+import { Ensure, equals } from '@serenity-js/assertions';
+import { Task, Debug } from '@serenity-js/core';
+import { Navigate, Page } from '@serenity-js/web';
+
+export const startWithAnEmptyList = () =>
+    Task.where(`#actor starts with an empty todo list`,
+        Navigate.to('/'),
+        Ensure.that(
+            Page.current().title().describedAs('website title'),
+            equals('Serenity/JS TodoApp'),
+        ),
+        Debug.values(() => {
+            // highlight-next-line
+            // set breakpoint
+        })
+    );
+
+    // ...
+```
+When you run a scenario using the task to `startWithAnEmptyList` in debug mode,
+you'll notice that the execution pauses where you wanted it to pause.
+However, setting breakpoints is **not the only thing** the interaction to `Debug` can do.
+
+### Retrieving information using questions
+
+In the [Screenplay Pattern](/handbook/design/screenplay-pattern), we design our automated tests to model how actors
+perform their activities to accomplish their goals. However, performing interactions is just one side of the coin.
+The other thing an actor must do is to determine if the behaviour of the system under test meets its acceptance criteria.
+To do that, actors need to retrieve information from the system, its execution environment, and sometimes - additional
+data sources.
+
+Serenity/JS models the act of information retrieval as [questions](/handbook/design/screenplay-pattern#questions) -
+an actor answers a question to obtain some information. Since questions represent a **way for actor to obtain the information**,
+and **not the result itself**, they can be used to parameterise actor's activities and resolved whenever the actor gets
+to performing the parameterised activity.
+
+:::info Remember
+**Actors** answer **questions** to obtain information.
+:::
+
+To see examples of how to define Serenity/JS questions, open [`spec/todo-list-app/TodoList/questions.ts`](https://github.com/serenity-js/serenity-js-playwright-test-template/blob/main/spec/todo-list-app/TodoList/questions.ts).
+
+Among several other functions you'll spot `itemNames()`, which should be already [familiar to you](/handbook/web-testing/your-first-web-scenario#writing-serenityjs-test-scenarios):
+
+```typescript title="spec/todo-list-app/TodoList/questions.ts"
+import { includes } from '@serenity-js/assertions';
+import { Answerable, d, QuestionAdapter } from '@serenity-js/core';
+import { By, PageElement, PageElements, Text } from '@serenity-js/web';
+
+export const items = () =>
+    PageElements.located(By.css('.todo-list li'))
+        .describedAs('displayed items');
+
+export const itemNames = () =>
+    Text.ofAll(items())
+        .map(name => name.trim())
+        .describedAs('displayed items') as QuestionAdapter<string[]>;
+
+export const itemCalled = (name: Answerable<string>) =>
+    items()
+        .where(Text, includes(name))
+        .first()
+        .describedAs(d`an item called ${ name }`) as QuestionAdapter<PageElement>;
+```
+
+Just like Serenity/JS activities can be [composed into tasks](/handbook/web-testing/your-first-web-scenario#modelling-workflows-using-reusable-activities),
+Serenity/JS [questions](/api/core/class/Question) can be composed with other questions to transform their results.
+
+:::info Remember
+You can compose questions to transform their results.
+:::
+
+In particular:
+- the question about `items()` resolves to [page elements](/api/web/class/PageElements)
+  corresponding to HTML widgets describing entries in the todo-list,
+- the question about `itemNames()` retrieves the [text content](/api/web/class/Text) of those elements,
+  and applies a simple transformation to [trim](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/trim)
+  space characters from both ends of the value,
+- the question about `itemCalled(name)` uses Serenity/JS [Page Element Query Language](/handbook/web-testing/page-element-query-language)
+  to retrieve a single item that matches an [expectation](/handbook/design/assertions),
+
+Also note how all the questions define [custom descriptions](/api/core/class/Question#describedAs) for Serenity/JS to use when reporting.
+
+### Debugging questions
+
+To use the interaction to [`Debug`](/api/core/class/Debug) to analyse what a given question resolves to,
+modify the scenario [you've written earlier](/handbook/web-testing/your-first-web-scenario#writing-serenityjs-test-scenarios):
+
+```typescript title="spec/recording-items.spec.ts"
+describe('Todo List App', () => {
+
+    it('should allow me to add a todo item', async ({ actor }) => {
+        await actor.attemptsTo(
+            startWithAnEmptyList(),
+
+            recordItem('Buy some milk'),
+
+            Ensure.that(itemNames(), equals([
+                'Buy some milk',
+            ])),
+
+            Debug.values(
+                (results, names) => {
+                    // highlight-next-line
+                    // set breakpoint here
+                },
+                // one or more questions to analyse
+                itemNames()
+            )
+        )
+    })
+
+    // other test scenarios
+})
+```
+
+When you run the scenario in debug mode and the execution pauses on the line where you've set the breakpoint,
+you'll notice that the actor resolved the question returned by `itemNames()` and
+that the [Run and Debug](https://code.visualstudio.com/docs/editor/debugging) panel
+shows the values of `results` and `names` you've specified as your function arguments.
+
+To learn more about how this works, check out the [debugging guide](/handbook/design/debugging).
+
+<Figure
+    caption='Debugging the results of Serenity/JS questions'
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-debugging-questions.gif')}
+/>
+
+### Exploring page element locators
+
+Serenity/JS [Playwright Test module](/handbook/test-runners/playwright-test) enables you to leverage
+[locator tuning](https://marketplace.visualstudio.com/items?itemName=ms-playwright.playwright#tune-locators)
+capabilities of the Playwright Test Visual Studio Code extension.
+This functionality is provided by Playwright, and more specifically
+[`page.locator`](https://playwright.dev/docs/api/class-page#page-locator) API that it offers.
+
+To use it, you'll need to:
+- use the interaction to [`Debug`](/api/core/class/Debug) to pause the scenario at breakpoint,
+- use [`PlaywrightPage.current().nativePage()`](/api/playwright/class/PlaywrightPage) from `@serenity-js/playwright`
+  to extract a Playwright `page` from the Serenity/JS [`Page`](/api/web/class/Page) that's wrapping it,
+- interact directly with the `page.locator` API.
+
+To see how the locator tuning features work in practice,
+modify the scenario [you've written earlier](/handbook/web-testing/your-first-web-scenario#writing-serenityjs-test-scenarios):
+
+```typescript title="spec/recording-items.spec.ts"
+describe('Todo List App', () => {
+
+    it('should allow me to add a todo item', async ({ actor }) => {
+        await actor.attemptsTo(
+            startWithAnEmptyList(),
+
+            recordItem('Buy some milk'),
+
+            Ensure.that(itemNames(), equals([
+                'Buy some milk',
+            ])),
+
+            Debug.values(
+                (results, page) => {
+                    // set breakpoint on the line below
+                    // highlight-next-line
+                    page.locator('h1')
+                },
+                PlaywrightPage.current().nativePage(),
+            )
+        )
+    })
+
+    // other test scenarios
+})
+```
+
+When you run your scenario through a debugger and the execution pauses on the line where you set
+the breakpoint, you'll notice that you can **modify the selector** passed to `page.locator`
+and that your [browser](/handbook/web-testing/your-first-web-scenario#showing-the-browser-window)
+highlights the matching elements **live** as you do it.
+
+<Figure
+    caption='Debugging the results of Serenity/JS questions'
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-debugging-exploring-locators.gif')}
+/>
+
+### Exercises
+
+To get familiar with debugging Serenity/JS test scenarios in Visual Studio Code, conduct the following experiments:
+1. Use the interaction to `Debug` to inspect the value of `Page.current().title()` and `Page.current().url()`
+1. Write a scenario that adds an item called "walk the dog" to the to-do list, and use the interaction to `Debug`
+   to inspect the value returned by `itemCalled('walk the dog').text()`
+1. Explore other methods offered by Serenity/JS [`PageElement`](/api/web/class/PageElement) returned by `itemCalled(name)`.
+   How would you check if an element is clickable or visible?
+1. Read the guide on [Serenity/JS debugging](/handbook/design/debugging#tweaking-playwright-locators) and experiment
+   with live evaluation of locators like `h1`, `footer p`, or `li.todo`
+
+## Test reporting
+
+Serenity frameworks are well-known for their state-of-the-art [reporting capabilities](/handbook/reporting/).
+Apart from the excellent [Serenity BDD reports](/handbook/reporting/serenity-bdd-reporter), however,
+Serenity/JS can also dramatically improve the standard [Playwright Test reports](/handbook/test-runners/playwright-test).
+Reports produced for Playwright Test scenarios that follow the [**Screenplay Pattern**](/handbook/design/screenplay-pattern)
+automatically include detailed information about actors' activities and much more thorough assertion error reports thanks
+to the dedicated [Serenity/JS assertions](/api/assertions) library.
+
+The [Serenity/JS + Playwright Test project template](https://github.com/serenity-js/serenity-js-playwright-test-template)
+you've been using in this tutorial is already set up to produce both the Serenity BDD and Playwright Test reports.
+
+To explore them, run the full test suite by invoking `npm test` in your terminal:
+
+<Figure
+    caption='Running the full test suite in Visual Studio Code'
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-test-reporting-npm-test.gif')}
+/>
+
+When the test suite is finished, you'll find your [Serenity BDD reports](/handbook/reporting/serenity-bdd-reporter)
+generated under `target/site/serenity`, and served on port `8080` on Gitpod:
+
+<Figure
+    caption='Serenity BDD reports'
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-test-reporting-serenity-bdd.gif')}
+/>
+
+[Playwright Test reports](/handbook/test-runners/playwright-test#using-serenityjs-reporting-services) are generated
+under `playwright-report` and served on port `8181` on Gitpod:
+
+<Figure
+    caption='Enhanced Playwright Test reports'
+    img={require('@site/static/images/web-testing/your-first-web-scenario/vs-code-test-reporting-playwright-test.gif')}
+/>
+
+## Next steps
+
+Congratulations! 🥳 You've just learnt how to write, run, and debug your first Serenity/JS test scenarios!
+
+If you'd like to learn more, I'd suggest for you to:
+- Explore the guides on [Serenity/JS Core Design Patterns](/handbook/design/)
+- Learn more about using Serenity/JS with [Playwright Test](/handbook/test-runners/playwright-test)
+- Clone the [Serenity/JS + Playwright Test template](https://github.com/serenity-js/serenity-js-playwright-test-template) and try running it locally, perhaps as a starting point for your next big project?
+- Make sure to [give Serenity/JS a ⭐️ on GitHub](https://github.com/serenity-js/serenity-js) and leave a comment or 👍 if you've enjoyed this tutorial!
+
+New tutorials and videos are coming soon, follow us on [LinkedIn](https://www.linkedin.com/company/serenity-js) and subscribe to [Serenity/JS YouTube channel](https://www.youtube.com/channel/UC0RdeVPyjtJopVHvlLrXd1Q) to get notified when they're available!
+
+[![LinkedIn Follow](https://img.shields.io/badge/Follow%20Serenity%2FJS-0077B5?style=for-the-badge&logo=linkedin&logoColor=white)](https://www.linkedin.com/company/serenity-js)
+[![YouTube Follow](https://img.shields.io/badge/Watch%20@serenity--js-E62117?style=for-the-badge&logo=youtube&logoColor=white)](https://www.youtube.com/@serenity-js)
+
+:::info Help us help you
+
+Serenity/JS is a free open-source framework, so we rely on our [wonderful GitHub sponsors](https://github.com/sponsors/serenity-js) to keep the lights on.
+
+If you appreciate all the effort that goes into making sophisticated tools easy to work with, please support our work and become a Serenity/JS GitHub Sponsor today!
+
+[![GitHub Sponsors](https://img.shields.io/badge/Support%20@serenity%2FJS-703EC8?style=for-the-badge&logo=github&logoColor=white)](https://github.com/sponsors/serenity-js)
+:::
+
+
+
+
+
