docs(website): updated readmes and prepared the website for publishing

--- a/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
+++ b/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
@@ -614,7 +614,7 @@ This list is a chronological order of significant events, implementations, and w
 * 2016: [Serenity/JS](https://github.com/serenity-js/serenity-js) - Jan Molak starts the Serenity/JS project - the original JavaScript/TypeScript implementation of the Screenplay Pattern
 * 2017: [Testing modern webapps. At scale.](https://www.slideshare.net/janmolak/testing-modern-webapps-at-scale) - Jan Molak introduces the idea of "Blended Testing" - making Screenplay Pattern tests scenarios interact with multiple interfaces as a way to improve test performance and encourage code reuse
 * 2017: [Having Our Cake and Eating It](https://speakerdeck.com/npryce/having-our-cake-and-eating-it-1) - [Nat Pryce](http://www.natpryce.com/) introduces the idea of using the Screenplay Pattern to write tests that run in milliseconds
-* 2019: [ScreenPy](https://pypi.org/project/screenpy/) - Python implementation of the Screenplay Pattern by [Perry Goy](https://www.linkedin.com/in/perry-goy/), inspired by the Serenity BDD implementation
+* 2019: [ScreenPy](https://pypi.org/project/screenpy/) - Python implementation of the Screenplay Pattern by [Perry Goy](https://www.linkedin.com/in/perry-goy/), inspired by Serenity BDD and Serenity/JS implementations
 * 2020: [Boa Constrictor](https://automationpanda.com/2020/10/16/introducing-boa-constrictor-the-net-screenplay-pattern/) - a .NET implementation of Screenplay by [Andrew Knight](https://automationpanda.com/), inspired by Serenity BDD and Serenity/JS
 * 2020: [Understanding Screenplay](https://cucumber.io/blog/bdd/understanding-screenplay-(part-1)/) - blog series by [Matt Wynne](https://blog.mattwynne.net/)
 * 2021: [Cucumber Screenplay](https://github.com/cucumber/screenplay.js) and [Sub-second TDD](https://github.com/subsecondtdd/todo-subsecond) - implementation by [Aslak Hellesøy](https://www.aslakhellesoy.com/), building on the Screenplay Pattern, and further exploring Nat Pryce's idea of sub-second acceptance tests and Jan Molak's "blended testing"
