docs(website): wordsmithing

--- a/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
@@ -20,7 +20,9 @@ If you found anything here that could have been clearer, please let me know in t
 To keep things simple, we'll use a [**Gitpod.io workspace**](/handbook/getting-started#serenityjs-gitpods) to work with Serenity/JS in your web browser, so there's **no need to install anything** on your computer.
 If you prefer to set up Serenity/JS locally instead, follow the installation instructions in [Serenity/JS + Playwright Test project template](https://github.com/serenity-js/serenity-js-playwright-test-template).
 
-Key points:
+[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/serenity-js/serenity-js-playwright-test-template)
+
+In this tutorial, you'll learn that:
 - Serenity/JS works well with popular development environments, including the free [Visual Studio Code](https://code.visualstudio.com/),
 - Serenity/JS tests are just high-quality code, so all your regular programming tools will work as expected,
 - Serenity/JS test scenarios are **actor-centric** and follow the [**Screenplay Pattern**](/handbook/design/screenplay-pattern) to help you capture **business domain vocabulary** and **business workflows**,
