docs(website): removed references to OpenBase as the service is shutting down
see https://twitter.com/LiorGrossman/status/1645447546318274561

closes #1620

--- a/documentation/serenity-js.org/docs/getting-started.mdx
+++ b/documentation/serenity-js.org/docs/getting-started.mdx
@@ -76,7 +76,7 @@ If you don't have a GitHub.com account yet, you can [sign up now](https://github
 
 Do you find Serenity/JS useful? [Give it a ⭐ star on GitHub](https://github.com/serenity-js/serenity-js) and tell your friends about the framework!
 
-[![GitHub stars](https://img.shields.io/github/stars/serenity-js/serenity-js)](https://github.com/serenity-js/serenity-js) [![Rate on Openbase](https://badges.openbase.io/js/rating/@serenity-js/core.svg)](https://openbase.io/js/@serenity-js/core?utm_source=embedded&utm_medium=badge&utm_campaign=rate-badge)
+[![GitHub stars](https://img.shields.io/github/stars/serenity-js/serenity-js)](https://github.com/serenity-js/serenity-js)
 
 Found a bug? Need a feature? Raise an [issue](https://github.com/serenity-js/serenity-js/issues?state=open) or [submit a pull request](/contributing) on [GitHub](https://github.com/serenity-js/serenity-js).
 
