docs(website): added a call to action

--- a/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
@@ -712,6 +712,7 @@ under `playwright-report` and served on port `8181` on Gitpod:
 ## Next steps
 
 Congratulations! 🥳 You've just learnt how to write, run, and debug your first Serenity/JS test scenarios!
+If you enjoyed this tutorial, please leave a 👍 in the reactions section below.
 
 If you'd like to learn more, I'd suggest for you to:
 - Explore the guides on [Serenity/JS Core Design Patterns](/handbook/design/)
