docs(website): linked to Serenity/JS tutorials and Project Templates
so that they're easy to find once you've read the Screenplay Pattern docs

--- a/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
+++ b/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
@@ -583,6 +583,31 @@ Then('{pronoun} should see top search result of', (actor: Actor, expectedResult:
     ))
 ```
 
+## Start with Serenity/JS Screenplay Pattern 🚀
+
+The easiest way to **experience** working with Serenity/JS and the Screenplay Pattern is
+to **follow the tutorial** and write [**your first web scenario**](/handbook/web-testing/your-first-web-scenario)!
+
+When you're ready to **start your own test automation project**, use one of the available [**Serenity/JS Project Templates**](/handbook/getting-started#serenityjs-project-templates)
+as they include a handful of Screenplay scenarios and combine some of the most popular configurations of Serenity/JS modules and test automation tools:
+
+- [REST API testing with Cucumber and Serenity/JS](https://github.com/serenity-js/serenity-js-cucumber-template)
+- [REST API testing with Mocha and Serenity/JS](https://github.com/serenity-js/serenity-js-mocha-template)
+- [Web testing with Cucumber, Playwright, and Serenity/JS](https://github.com/serenity-js/serenity-js-cucumber-playwright-template)
+- [Web testing with Playwright Test and Serenity/JS](https://github.com/serenity-js/serenity-js/tree/main/examples/playwright-test-todomvc)
+- [Web testing with WebdriverIO, Mocha, and Serenity/JS](https://github.com/serenity-js/serenity-js/tree/main/examples/webdriverio-mocha-todomvc)
+- [Web testing with WebdriverIO, Cucumber, and Serenity/JS](https://github.com/serenity-js/serenity-js-cucumber-webdriverio-template)
+
+To dive even deeper, check out the [Serenity/JS repository](https://github.com/serenity-js/serenity-js)
+and explore the [examples](https://github.com/serenity-js/serenity-js/tree/main/examples).
+
+:::tip Try Serenity/JS in your browser
+Thanks to [Gitpod.io](/handbook/getting-started#serenityjs-gitpods),
+you can follow the [web testing tutorial](/handbook/web-testing/your-first-web-scenario)
+and use any of the [Serenity/JS Project Templates](/handbook/getting-started#serenityjs-project-templates) right here in your browser,
+no local installation required! 🚀
+:::
+
 ## History of the Screenplay Pattern
 
 [Serenity/JS](https://github.com/serenity-js) introduced the Screenplay Pattern to JavaScript back in 2016,
