docs(website): finally added my bio

--- a/documentation/serenity-js.org/docs/index.mdx
+++ b/documentation/serenity-js.org/docs/index.mdx
@@ -4,6 +4,10 @@ sidebar_position: 1
 
 # Why Serenity/JS
 
+```mdx-code-block
+import AuthorBio from '@site/src/components/AuthorBio';
+```
+
 **Serenity/JS** is a free and open-source **acceptance testing framework** that can help you establish a **clear link** between
 the **expected business functionality** and the **actual working state** of your software system.
 
@@ -29,6 +33,10 @@ The **modular** and **extensible architecture** of the framework will let you us
 This handbook will help you get started with Serenity/JS and offers plenty of **practical examples**, **exercises**, and **reference implementations** you can explore
 to become successful with test automation.
 
-Enjoy Serenity!
+_Enjoy Serenity!_
 
-_[Jan Molak](https://linkedin.com/in/janmolak) and the Serenity/JS Team_
+_Jan Molak and the Serenity/JS Team_
+
+---
+
+<AuthorBio />
